fix: corrigindo bug no input amail

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -53,18 +53,13 @@
             <div class="login-inputs">
               <div class="input-group">
                 <label for="email"> Email</label>
-                <div class="input-icon-wrapper">
+                <div class="login-input-group">
                   <input
                     class="email"
                     id="email"
                     type="text"
                     placeholder="Digite seu email"
                     required
-                  />
-                  <img
-                    class="icon"
-                    src="../assets/icons/icon_mail.svg"
-                    alt="icone email"
                   />
                 </div>
               </div>
